[package]
name = "pts"
version = "0.9.4"
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.0.4"
emojis = "0.6.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.133"
csv = "1.3.1"
calamine = "0.26.1"
