[package]
name = "pts"
version = "0.9.48"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
emojis = "0.6.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.138"
csv = "1.3.1"
calamine = "0.26.1"
