[package]
name = "pts"
version = "0.9.54"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
emojis = "0.6.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
serde_json = "1.0.140"
csv = "1.3.1"
calamine = "0.25.0"
rust_xlsxwriter = "0.87.0"
